[gd_scene load_steps=20 format=3 uid="uid://bmu1l7g7epgvv"]

[ext_resource type="Script" uid="uid://dkkldbknxoaa7" path="res://UI/settings_menu.gd" id="1_ufg0w"]
[ext_resource type="Texture2D" uid="uid://co4xabuj4cnyd" path="res://ui Design for FC/ButtonsIcons/IconButton_Small_GreyOutline_Rounded.png" id="2_0cmel"]
[ext_resource type="Shader" uid="uid://cqermrrr7fk66" path="res://UI/settings_menu.gdshader" id="2_yl4dm"]
[ext_resource type="PackedScene" uid="uid://bdi65qr1qegn2" path="res://UI/volume_slider.tscn" id="4_3pt1a"]
[ext_resource type="Texture2D" uid="uid://d2chtjwxb3sxw" path="res://ui Design for FC/ButtonsIcons/IconButton_Small_Blue_Square.png" id="4_fiqec"]
[ext_resource type="Texture2D" uid="uid://daqtevtdk7yc" path="res://ui Design for FC/ButtonsIcons/IconButton_Small_GreyOutline_Square.png" id="5_2d6lb"]
[ext_resource type="Texture2D" uid="uid://desbotctxyh0a" path="res://ui Design for FC/ButtonsIcons/IconButton_Large_Blank_Rounded.png" id="5_a0cf0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ttjgw"]
shader = ExtResource("2_yl4dm")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yl4dm"]
texture = ExtResource("5_2d6lb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ttjgw"]
texture = ExtResource("5_2d6lb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i8lcu"]
texture = ExtResource("4_fiqec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h437d"]
texture = ExtResource("4_fiqec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_56ip2"]
texture = ExtResource("5_2d6lb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0tp7r"]
texture = ExtResource("5_2d6lb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4b38l"]
texture = ExtResource("4_fiqec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2tlyv"]
texture = ExtResource("4_fiqec")

[sub_resource type="Animation" id="Animation_8pph3"]
resource_name = "Blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 0.8, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_exc7q"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajx48"]
_data = {
&"Blur": SubResource("Animation_8pph3"),
&"RESET": SubResource("Animation_exc7q")
}

[node name="Settings-Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufg0w")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ttjgw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Backplate" type="MarginContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(550, 550)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Backplate_design" type="NinePatchRect" parent="PanelContainer/MarginContainer/Backplate"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("2_0cmel")
patch_margin_left = 200
patch_margin_top = 200
patch_margin_right = 200
patch_margin_bottom = 200

[node name="Volume_box" type="MarginContainer" parent="PanelContainer/MarginContainer/Backplate/Backplate_design"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -68.5
offset_right = 225.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Volume_box"]
layout_mode = 2

[node name="Master_label" type="Label" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Volume_box/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
text = "Master Volume"

[node name="Master_vol" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Volume_box/VBoxContainer" instance=ExtResource("4_3pt1a")]
layout_mode = 2
bus_name = "Master"

[node name="Music_label" type="Label" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Volume_box/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
text = "Music Volume"

[node name="Music_vol" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Volume_box/VBoxContainer" instance=ExtResource("4_3pt1a")]
layout_mode = 2
bus_name = "Music"

[node name="SFX_label" type="Label" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Volume_box/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
text = "SFX Volume"

[node name="SFX_vol" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Volume_box/VBoxContainer" instance=ExtResource("4_3pt1a")]
layout_mode = 2
bus_name = "SFX"

[node name="Pause_label" type="MarginContainer" parent="PanelContainer/MarginContainer/Backplate/Backplate_design"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
offset_left = 175.0
offset_right = 375.0
offset_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_bottom = 15

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Pause_label"]
layout_mode = 2
texture = ExtResource("5_a0cf0")
region_rect = Rect2(1, 0, 360, 355)

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Pause_label/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 15
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit_Resume" type="MarginContainer" parent="PanelContainer/MarginContainer/Backplate/Backplate_design"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -250.0
offset_right = 175.0
grow_horizontal = 2
grow_vertical = 0

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Quit_Resume"]
custom_minimum_size = Vector2(350, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Quit_Resume/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 5
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_yl4dm")
theme_override_styles/hover = SubResource("StyleBoxTexture_ttjgw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i8lcu")
theme_override_styles/normal = SubResource("StyleBoxTexture_h437d")
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Quit_Resume/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 5
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_yl4dm")
theme_override_styles/hover = SubResource("StyleBoxTexture_ttjgw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_i8lcu")
theme_override_styles/normal = SubResource("StyleBoxTexture_h437d")
text = "Restart"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/Backplate/Backplate_design/Quit_Resume/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 5
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_56ip2")
theme_override_styles/hover = SubResource("StyleBoxTexture_0tp7r")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4b38l")
theme_override_styles/normal = SubResource("StyleBoxTexture_2tlyv")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ajx48")
}

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Backplate/Backplate_design/Quit_Resume/Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Backplate/Backplate_design/Quit_Resume/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Backplate/Backplate_design/Quit_Resume/Buttons/Quit" to="." method="_on_quit_pressed"]
